update links e grafica

--- a/public/it/ytlyrics.html
+++ b/public/it/ytlyrics.html
@@ -34,7 +34,10 @@
 
 <div class="container">
     <div class="monocolumn">
-	<div class="languages"><div class="first"><a href="../en">English</a></div><div class="active"><a href="../it">Italiano</a></div></div>
+	<div class="languages">
+	<div class="first"><a href="../en/ytlyrics.html">English</a></div>
+	<div class="active"><a href="../it/ytlyrics.html">Italiano</a></div>
+	</div>
       <h2 style="clear:both"> <img src="../resources/logo.png" alt="YTLyrics" /> 
         <a class="box-btn" href="javascript:(function(){ var localpath = ''; localpath = 'https://yt-lyrics.appspot.com/';/*localpath='http://localhost:8080/';*/if(window.myBookmarklet!==undefined){ myBookmarklet(); }else{ var scriptz = document.createElement('script'); scriptz.src=localpath + 'it/bookmarklet.js?v191'; document.body.appendChild(scriptz);  } })();">Cerca testo - YtLyrics 2</a></h2>
           <img class="content-image " src="../web-resources/tutorial1_ita.png" alt="Tutorial step 1" >
